4.servarr/gluetun.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-gateway
  labels:
    app: vpn-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn-gateway
  template:
    metadata:
      labels:
        app: vpn-gateway
    spec:
      containers:
        - name: vpn
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - containerPort: 8000 # Gluetun control port
            - containerPort: 8080 # HTTP proxy port
            - containerPort: 9090 # SOCKS5 proxy port
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: vpn-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: vpn-gateway
  ports:
    - name: http-proxy
      port: 8080
      targetPort: 8080
    - name: socks5-proxy
      port: 9090
      targetPort: 9090
    - name: control
      port: 8000
      targetPort: 8000
