4.servarr/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-cache
              mountPath: /cache
            - name: qbittorrent-downloads
              mountPath: /library
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    argocd.argoproj.io/sync-wave: "4"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jellyfin.acc.ricksdomein.nl
      secretName: jellyfin-https-cert
  rules:
    - host: jellyfin.acc.ricksdomein.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
