4.servarr/jellyseer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseer
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseer
  template:
    metadata:
      labels:
        app: jellyseer
    spec:
      securityContext:
          fsGroup: 1000
      containers:
        - name: jellyseer
          image: harbor.acc.ricksdomein.nl/library/jellyseerr:preview-OIDC-ca
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseer-config
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseer
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: jellyseer
  ports:
    - name: http
      port: 5055
      targetPort: 5055
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: jellyseer.acc.ricksdomein.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseer
                port:
                  number: 5055
  tls:
    - hosts:
        - jellyseer.acc.ricksdomein.nl
      secretName: jellyseer-https-cert
