4.servarr/prowlarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        ports:
        - name: webui
          containerPort: 9696
        volumeMounts:
      #   - name: config
      #     mountPath: /config
        - name: prowlarr-conf
          mountPath: /config/config.xml
          subPath: config.xml
      volumes:
      # - name: config
      #   persistentVolumeClaim:
      #     claimName: prowlarr-config
      - name: prowlarr-conf
        configMap:
          name: prowlarr-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
  - name: webui
    port: 9696
    targetPort: 9696
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: |-
      http://ak-outpost-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
      https://prowlarr.acc.ricksdomein.nl/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Forwarded-Proto $scheme;
    argocd.argoproj.io/sync-wave: "7"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prowlarr.acc.ricksdomein.nl
      secretName: prowlarr-https-cert
  rules:
    - host: prowlarr.acc.ricksdomein.nl
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-outpost
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
