4.servarr/qbittorrent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        ports:
        - name: webui
          containerPort: 8080
        - name: torrent-tcp
          containerPort: 6881
          protocol: TCP
        - name: torrent-udp
          containerPort: 6881
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: qbittorrent-conf
          mountPath: /config/qBittorrent/qBittorrent.conf
          subPath: qBittorrent.conf
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: downloads
        persistentVolumeClaim:
          claimName: qbittorrent-downloads
      - name: qbittorrent-conf
        configMap:
          name: qbittorrent-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
  - name: torrent-tcp
    port: 6881
    targetPort: 6881
    protocol: TCP
  - name: torrent-udp
    port: 6881
    targetPort: 6881
    protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: |-
      http://ak-outpost-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
      https://qbittorrent.acc.ricksdomein.nl/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Forwarded-Proto $scheme;
    argocd.argoproj.io/sync-wave: "7"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - qbittorrent.acc.ricksdomein.nl
      secretName: qbittorrent-https-cert
  rules:
    - host: qbittorrent.acc.ricksdomein.nl
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-outpost
                port:
                  number: 9000 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
