4.servarr/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-conf
              mountPath: /config/config.xml
              subPath: config.xml
            - name: qbittorrent-downloads
              mountPath: /downloads
            - name: movies-pvc
              mountPath: /movies
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: radarr-conf
          configMap:
            name: radarr-configmap
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: movies-pvc
          persistentVolumeClaim:
            claimName: movies-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
      targetPort: 7878
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    argocd.argoproj.io/sync-wave: "4"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - radarr.acc.ricksdomein.nl
      secretName: radarr-https-cert
  rules:
    - host: radarr.acc.ricksdomein.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
