4.servarr/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      # InitContainer to create directories automatically
      securityContext:
          fsGroup: 1000
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: sonarr-conf
              mountPath: /config/config.xml
              subPath: config.xml
            - name: qbittorrent-downloads
              mountPath: /library
            - name: series-pvc
              mountPath: /series
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: sonarr-conf
          configMap:
            name: sonarr-configmap
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: series-pvc
          persistentVolumeClaim:
            claimName: series-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: 8989
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    argocd.argoproj.io/sync-wave: "4"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sonarr.acc.ricksdomein.nl
      secretName: sonarr-https-cert
  rules:
    - host: sonarr.acc.ricksdomein.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
